--- a/touaki/Login.html
+++ b/touaki/Login.html
@@ -53,7 +53,15 @@
         <div class="ParagraphBody">
             <div class="Parag-img"></div>
             <div class="FlowContainer">
-                <div class="FormTitle"></div>
+                <div class="FormTitle">您的手機號碼就是登入帳號</div>
+                <form action="">
+                    <div class="PhoneWrapper">
+                        <input type="tel" name="cellPhone" placeholder="輸入手機號碼">
+                    </div>
+                    <div class="BtnContainer">
+                        <button class="button__Button">登入/註冊</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
