--- a/touaki/index.html
+++ b/touaki/index.html
@@ -113,7 +113,7 @@
                     <p class="time-nb">17:53</p>
                 </div>
                 <div class="menu-link">
-                    <a href="https://rahaydn.github.io/cid101/project/menu.html">
+                    <a href="https://rahaydn.github.io/cid101/touaki/menu.html">
                         <i class="fa-solid fa-utensils"></i>
                         <h3>菜單</h3>
                     </a>
@@ -143,7 +143,7 @@
                     <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
                     <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
                     <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
-                    <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
+                    <p>圖片參考網址:<br>https://www.lebrewlife.co/blogs/coffee/70257</p>
                 </div>
                 <div class="account-icon">
                     <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
