--- a/touaki/menu.html
+++ b/touaki/menu.html
@@ -148,7 +148,7 @@
             <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
             <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
             <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
-            <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
+            <p>圖片參考網址:<br>https://www.lebrewlife.co/blogs/coffee/70257</p>
         </div>
         <div class="account-icon">
             <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
