--- a/touaki/news.html
+++ b/touaki/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>最新消息</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="new.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,12 +105,14 @@
                 <span>Back to top</span> 
             </a>
         </div>
-        <img src="photo/touaki.png" alt="logo">
+        <div class="logo-img">
+            <img src="photo/touaki.png" alt="logo">
+        </div>
         <div class="address">
             <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
             <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
             <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
-            <p>圖片參考網址:<br>https://www.lebrewlife.co/blogs/coffee/70257</p>
+            <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
         </div>
         <div class="account-icon">
             <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
