--- a/touaki/menu.html
+++ b/touaki/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>菜單</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="menu.css">
     <link href="https://cdn.bootcss.com/flexslider/2.6.3/flexslider.min.css" rel="stylesheet">
@@ -54,7 +54,6 @@
             <img src="photo/3a.jpg" alt="菜單">
             <h1>TOUAKI&MENU</h1>
         </div>
-    </div>
     <div>
         <nav class="breadcrumb">
             <ul>
@@ -70,7 +69,7 @@
                 <li><img src="photo/mailk-fotor-2024050825742.jpg" alt="抹茶咖啡" width="350" height="250"></li>
             </ul>
         </div>
-        <div class="menu-txt">
+        <div class="menu-txt text-cafe">
             <h2>黑咖啡 BLACK COFFE</h2>
             <h3>冠軍黑咖啡<span>55</span><span>70</span></h3>
             <p>Champion black coffe</p>
@@ -96,7 +95,7 @@
                 <li><img src="photo/san.jpg" alt="" width="350" height="250"></li>
             </ul>
         </div>
-        <div class="menu-txt">
+        <div class="menu-txt ">
             <h2>三明治 HOT SANDWICH</h2>
             <h3>雞肉三明治<span>150</span></h3>
             <p>Chicken Sandwich</p>
@@ -121,7 +120,7 @@
                 <li><img src="photo/cake3.jpg" alt="" width="350" height="250"></li>
             </ul>
         </div>
-        <div class="menu-txt">
+        <div class="menu-txt text-cake">
             <h2>甜點 DESSERT</h2>
             <h3 class="pie">岩燒黃金乳酪派<span>65</span></h3>
             <p>Cream Cheese Pie</p>
@@ -143,12 +142,14 @@
                 <span>Back to top</span> 
             </a>
         </div>
-        <img src="photo/touaki.png" alt="logo">
+        <div class="logo-img">
+            <img src="photo/touaki.png" alt="logo">
+        </div>
         <div class="address">
             <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
             <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
             <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
-            <p>圖片參考網址:<br>https://www.lebrewlife.co/blogs/coffee/70257</p>
+            <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
         </div>
         <div class="account-icon">
             <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
