新增網頁，css修改

--- a/touaki/QA.html
+++ b/touaki/QA.html
@@ -52,6 +52,37 @@
             </ul>
         </nav>
     </div>
+    <section class="ctn">
+        <div class="ctn-warp">
+            <h1>常見問題</h1>
+            <button class="accordion">第一次買咖啡豆要注意什麼？</button>
+            <div class="panel">
+                <p> 一磅咖啡豆可以煮幾杯，1磅咖啡豆約等於454g，若以市售中杯咖啡約350-360ml、常用粉水比*1:18計量，每杯咖啡用粉量落在18-21g，1磅咖啡豆依個人不同濃淡喜好約可沖煮21-25杯之間，非常適合辦公室族群或重度咖啡成癮者入手。</p>
+            </div>
+            <button class="accordion">沖煮一杯咖啡需要多少豆子？</button>
+            <div class="panel">
+                <p>若是第一次嘗試沒喝過的咖啡豆，建議先從小包裝入手，試試風味接受度，也不必擔心開封後要在最佳賞味期1-3個月內喝完。</p>
+            </div>
+            <button class="accordion">為什麼有些咖啡酸酸的?</button>
+            <div class="panel">
+                <p>咖啡喝起來怎麼酸酸的？該不會是過期了？別緊張，你喝到的可能是淺培咖啡喔！咖啡的酸味取決於烘焙時間的長短，畢竟咖啡豆其實是一種水果，將咖啡櫻桃去除果皮、果肉後精緻處理，取得咖啡生豆，烘焙過後便是常見的咖啡豆。</p>
+            </div>
+            <button class="accordion">為什麼有些咖啡酸酸的?</button>
+            <div class="panel">
+                <p>綜合豆 和 配方豆因為可以混合豆源，喝起來層次豐富，也能嚐到杯測師精心調配的風味；單品咖啡的魅力在於各家莊園種植條件多元，許多獨家風味受到氣候土壤環境因素，甚至是季節限定推出。
+                    單品咖啡的誕生講求天時地利人和，稀缺性高，因此「精品咖啡」的概念問世，精品咖啡協會SCA (Specialty Coffee Association) 將杯測分數達80分以上的定義為精品咖啡。</p>
+            </div>
+            <button class="accordion">如何聯繫客服？</button>
+            <div class="panel">
+                <p>電話:03-1234567</p>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
     <div class="footer-logo">
         <div class="top-btn">
             <a href="#top" class="back-to-top">
