--- a/touaki/index.html
+++ b/touaki/index.html
@@ -26,8 +26,8 @@
                         </li>
                         <li><a href="https://rahaydn.github.io/cid101/touaki/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
                         </li>
-                        <li><a href="#"><span data-txt="咖啡專覽">咖啡專覽</span></a></li>
-                        <li><a href="#"><span data-txt="常見問題">常見問題</span></a></li>
+                        <li><a href="coffee beans.html"><span data-txt="咖啡專覽">咖啡專覽</span></a></li>
+                        <li><a href="QA.html"><span data-txt="常見問題">常見問題</span></a></li>
                     </ul>
                     <button id="btnHam" >
                         <span></span>
@@ -43,7 +43,7 @@
             </div>
             <div class="ribbon" id="imgBoard">
                 <div class="content">
-                    <a href="#">
+                    <a href="Login.html">
                         <img src="photo/member1.png" alt="">會員登入</div>
                     </a>
                 </div>
