--- a/touaki/coffee beans.html
+++ b/touaki/coffee beans.html
@@ -3,87 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>商品</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="coffee beans.css">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Condiment&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <header class="head" id="top">
+        <div class="head-nav">
+            <nav>
+                <div class="nav-log"><a href="https://rahaydn.github.io/cid101/touaki/index.html" class="logo">
+                        <img src="photo/touaki (2).png" alt="logo"></a>
+                </div>
+                <ul id="menu">
+                    <li><a href="https://rahaydn.github.io/cid101/touaki/news.html"><span data-txt="最新消息">最新消息</span></a>
+                    </li>
+                    <li><a href="https://rahaydn.github.io/cid101/touaki/menu.html"><span data-txt="門市菜單">門市菜單</span></a>
+                    </li>
+                    <li><a href="coffee beans.html"><span data-txt="咖啡專覽">咖啡專覽</span></a></li>
+                    <li><a href="QA.html"><span data-txt="常見問題">常見問題</span></a></li>
+                </ul>
+                <button id="btnHam">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </nav>
+        </div>
+    </header>
     <div class="front-img">
         <img src="photo/shop7.jpg" alt="首頁圖">
-        <span class="text">Delicious Coffee Shop</span>
+        <h1 class="text">Delicious Coffee Shop</h1>
     </div>
+    <div class="ribbon" id="imgBoard">
+        <div class="content">
+            <a href="Login.html">
+                <img src="photo/member1.png" alt="">會員登入
+        </div>
+        </a>
+    </div>
+    <div class="ribbons" id="imgBoards">
+        <div class="content-rib">
+            <a href="#">
+                <img src="photo/datd.png" alt="">立即預約
+        </div>
+        </a>
+    </div>
+
+
     <div>
         <nav class="breadcrumb">
             <ul>
                 <li><a href="https://rahaydn.github.io/cid101/project/index.html">首頁</a></li>
-                <li><a href="https://rahaydn.github.io/cid101/project/news.html">最新消息</a> </li> 
+                <li><a href="https://rahaydn.github.io/cid101/project/news.html">商品</a> </li> 
             </ul>
         </nav>
     </div>
     <div class="section-products">
-        <ul class="coffee-list">
-            <li>全站商品</li><span>All Products</span>
-            <li>咖啡豆</li>
-            <li>濾掛咖啡</li>
-            <li>燕麥奶</li>
-            <li>淺培|偏酸</li>
-            <li>中培|不酸不苦</li>
-            <li>深培|偏苦</li>
-        </ul>
-        <div class="coffee-products">
-            <div class="coffee-img">
-                <img src="photo/咖啡烘焙度-fotor-2024040116034 1.jpg" alt="咖啡圖">
+        <div class="container">
+            <div class="row">
+                <div class="coffee-list col-2">
+                <ul>
+                    <li><a href="#">全站商品<span>All Products</span></a></li>
+                    <li><a href="#">咖啡豆</a></li>
+                    <li><a href="#">濾掛咖啡</a></li>
+                    <li><a href="#">燕麥奶</a></li>
+                    <li><a href="#">淺培|偏酸</a></li>
+                    <li><a href="#">中培|不酸不苦</a></li>
+                    <li><a href="#">深培|偏苦</a></li>
+                </ul>
             </div>
-            <div class="coffee-products">
-                <div class="card">
-                    <img src="photo/shop1.jpg" alt="商品1">
-                    <p>佛羅娜咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop1.jpg" alt="商品1">
-                    <p>肯亞咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop1.jpg" alt="商品1">
-                    <p>哥倫比亞咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop1.jpg" alt="商品1">
-                    <p>輕柳綜合咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品2">
-                    <p>莊園咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品2">
-                    <p>冠軍拿鐵咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品2">
-                    <p>冠軍單品咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品2">
-                    <p>衣索比亞咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品3">
-                    <p>掛耳式咖啡-佛羅娜</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品3">
-                    <p>掛耳式咖啡-肯亞咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品3">
-                    <p>掛耳式咖啡-哥倫比亞咖啡豆</p>
-                </div>
-                <div class="card">
-                    <img src="photo/shop2.jpg" alt="商品3">
-                    <p>掛耳式咖啡-輕柳綜合咖啡豆</p>
-                </div>
+                <div class="coffee-products col-9">
+                    <div class="coffee-img">
+                        <img src="photo/咖啡烘焙度-fotor-2024040116034 1.jpg" alt="咖啡圖">
+                    </div>
+                    <div class="coffee-products">
+                        <div class="container">
+                            <div class="row">
+                                <div class="card col-3">
+                                    <img src="photo/shop1.jpg" alt="商品1">
+                                    <p>佛羅娜咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop1.jpg" alt="商品1">
+                                    <p>肯亞咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop1.jpg" alt="商品1">
+                                    <p>哥倫比亞咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop1.jpg" alt="商品1">
+                                    <p>輕柳綜合咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品2">
+                                    <p>莊園咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品2">
+                                    <p>冠軍拿鐵咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品2">
+                                    <p>冠軍單品咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品2">
+                                    <p>衣索比亞咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品3">
+                                    <p>掛耳式咖啡-佛羅娜</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品3">
+                                    <p>掛耳式咖啡-肯亞咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品3">
+                                    <p>掛耳式咖啡-哥倫比亞咖啡豆</p>
+                                </div>
+                                <div class="card col-3">
+                                    <img src="photo/shop2.jpg" alt="商品3">
+                                    <p>掛耳式咖啡-輕柳綜合咖啡豆</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
             </div>
         </div>
     </div>
+    <div class="footer-logo">
+        <div class="top-btn">
+            <a href="#top" class="back-to-top">
+                <i class="fa-solid fa-arrow-up"></i><br>    
+                <span>Back to top</span> 
+            </a>
+        </div>
+        <div class="logo-img">
+            <img src="photo/touaki.png" alt="logo">
+        </div>
+        <div class="address">
+            <div class="logo-phone"><img src="photo/phone.png" alt=""><p>03-1234567</p></div>
+            <div class="logo-map"><img src="photo/map.png" alt=""><p>328 桃園市觀音區莊三街8號</p></div>
+            <p>Copyright © 2024 豆燒咖啡廳WiEdu CO.</p>
+            <p>圖片參考網址:https://www.lebrewlife.co/blogs/coffee/70257</p>
+        </div>
+        <div class="account-icon">
+            <a href="#"><img src="photo/Vector (4).png" alt="line"></a>
+            <a href="#"><img src="photo/Vector (2).png" alt="fb"></a>
+            <a href="#"><img src="photo/Vector (3).png" alt="instagram"></a>
+        </div>
+    </div>
+    <script src="new.js"></script> 
 </body>
 </html>
